Work on putting the disk in DiskANN. Update Searcher for re-ranking, SiftSmall to compare heap/disk, and misc assorted changes to allow that to be plumbed together.